[package]
name = "wolfssl-src"
version = "0.1.0+4.5.0"
authors = ["Theodore Cipicchio <theodore.cipicchio@m10.io>"]
edition = "2018"
description = "Source of wolfSSL and logic to build it"
license = "MIT/Apache-2.0"
repository = "https://github.com/m10io/wolfssl-src-rs"

[dependencies]
bitflags = "1.2"
